--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.4.5",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-tippy": "^1.4.0",
     "react-transition-group": "^4.4.5",
     "react-unity-webgl": "^9.3.0",
     "web-vitals": "^2.1.4"
